made db import script

--- a/test_database.ipynb
+++ b/test_database.ipynb
@@ -16,6 +16,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['medication_id',\n",
+       " 'invoice_id',\n",
+       " 'exp_code',\n",
+       " 'supply_loc',\n",
+       " 'item_no',\n",
+       " 'item_description',\n",
+       " 'vendor_name',\n",
+       " 'vendor_ctg_no',\n",
+       " 'mfr_name',\n",
+       " 'mfr_ctlg_no',\n",
+       " 'comdty_name',\n",
+       " 'comdty_code',\n",
+       " 'requisition_no',\n",
+       " 'requisition_date',\n",
+       " 'issue_qty',\n",
+       " 'um',\n",
+       " 'price',\n",
+       " 'extended_price',\n",
+       " 'cost_center_no']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i.split(\"=\")[0].strip() for i in \"\"\"medication_id = db.Column(db.BigInteger, db.ForeignKey('PersistentMedication.id'))\n",
+    "invoice_id = db.Column(db.BigInteger, db.ForeignKey('Invoice.id'))\n",
+    "exp_code = db.Column(db.Integer)\n",
+    "supply_loc = db.Column(db.String(255))\n",
+    "item_no = db.Column(db.Integer)\n",
+    "item_description = db.Column(db.String(255))\n",
+    "vendor_name = db.Column(db.String(255))\n",
+    "vendor_ctg_no = db.Column(db.BigInteger)\n",
+    "mfr_name = db.Column(db.String(255))\n",
+    "mfr_ctlg_no = db.Column(db.BigInteger)\n",
+    "comdty_name = db.Column(db.String(255))\n",
+    "comdty_code = db.Column(db.String(255))\n",
+    "requisition_no = db.Column(db.BigInteger)\n",
+    "requisition_date = db.Column(db.DateTime)\n",
+    "issue_qty = db.Column(db.Float)\n",
+    "um = db.Column(db.String(255))\n",
+    "price = db.Column(db.Float)\n",
+    "extended_price = db.Column(db.Float)\n",
+    "cost_center_no = db.Column(db.BigInteger)\"\"\".split(\"\\n\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2017, 12, 5, 13, 49, 22, 140846)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "testdb = database.save_persistent_record(test4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Acetylsalicylic acid'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col = \"name\"\n",
+    "getattr(testdb,col)\n",
+    "setattr"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
@@ -132,7 +241,7 @@
     "database.save_persistent_record(test1)\n",
     "database.save_persistent_record(test2)\n",
     "database.save_persistent_record(test3)\n",
-    "database.save_persistent_record(test4)\n",
+    "testdb = database.save_persistent_record(test4)\n",
     "database.ver_db_session.flush()"
    ]
   },
