fixed bbug where no medication values for year would appear

--- a/test_database.ipynb
+++ b/test_database.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/wsgiapps/ehhapp-formulary2/views.py:3: ExtDeprecationWarning: Importing flask.ext.login is deprecated, use flask_login instead.\n",
-      "  import flask.ext.login as flask_login\n"
+      "/var/wsgiapps/ehhapp-formulary2/database.py:12: ExtDeprecationWarning: Importing flask.ext.login is deprecated, use flask_login instead.\n",
+      "  from flask.ext.login import LoginManager, login_required, login_user, \\\n"
      ]
     }
    ],
@@ -131,6 +131,49 @@
    ],
    "source": [
     "database.get_all_medication_records()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "meds = database.get_all_medication_records()\n",
+    "med_to_csv = list()\n",
+    "for med in meds:\n",
+    "    last_price = None\n",
+    "    for t in med.transactions:\n",
+    "        rowdict = dict()\n",
+    "        rowdict[\"medication_id\"] = med.id\n",
+    "        rowdict[\"category\"] = med.category\n",
+    "        rowdict[\"date\"] = t.date\n",
+    "        rowdict[\"quantity\"] = t.qty\n",
+    "        rowdict[\"price\"] = t.price\n",
+    "        rowdict[\"pct_change_from_last\"] = (t.price-last_price)/last_price*100. if last_price != None else 0\n",
+    "        med_to_csv.append(rowdict)\n",
+    "        last_price = t.price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(med_to_csv,columns=[\"medication_id\",\"category\",\"date\",\"quantity\",\"price\",\"pct_change_from_last\"]).to_csv(\"medication_records_pct.csv\",\n",
+    "                                                                                    index=None)"
    ]
   },
   {
