jsonp endpoint and form fix to edit med

--- a/test_database.ipynb
+++ b/test_database.ipynb
@@ -2,21 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/wsgiapps/ehhapp-formulary2/database.py:12: ExtDeprecationWarning: Importing flask.ext.login is deprecated, use flask_login instead.\n",
-      "  from flask.ext.login import LoginManager, login_required, login_user, \\\n"
-     ]
-    }
-   ],
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "import database"
+    "%matplotlib inline\n",
+    "from matplotlib import rcParams\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import database\n",
+    "import pandas as pd\n",
+    "\n",
+    "plt.style.use('seaborn')\n",
+    "rcParams['figure.figsize'] = (4,4)\n",
+    "rcParams['figure.dpi'] = 300\n",
+    "rcParams[\"legend.labelspacing\"]=0\n",
+    "rcParams[\"legend.columnspacing\"] = 0\n",
+    "rcParams[\"legend.shadow\"] = False\n",
+    "rcParams[\"legend.frameon\"] = False\n",
+    "rcParams[\"legend.borderpad\"] = 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "database.ver_db_session.rollback()\n",
+    "medications = database.PersistentMedication.query.all()\n",
+    "for med in medications:\n",
+    "    med.prescribable = True\n",
+    "    database.ver_db_session.add(med)\n",
+    "    database.ver_db_session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -144,8 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -153,27 +187,265 @@
     "meds = database.get_all_medication_records()\n",
     "med_to_csv = list()\n",
     "for med in meds:\n",
+    "    rowdict = dict()\n",
     "    last_price = None\n",
-    "    for t in med.transactions:\n",
-    "        rowdict = dict()\n",
-    "        rowdict[\"medication_id\"] = med.id\n",
-    "        rowdict[\"category\"] = med.category\n",
-    "        rowdict[\"date\"] = t.date\n",
-    "        rowdict[\"quantity\"] = t.qty\n",
-    "        rowdict[\"price\"] = t.price\n",
-    "        rowdict[\"pct_change_from_last\"] = (t.price-last_price)/last_price*100. if last_price != None else 0\n",
-    "        med_to_csv.append(rowdict)\n",
-    "        last_price = t.price"
+    "    rowdict[\"category\"] = med.category\n",
+    "    rowdict[\"common_name\"] = med.common_name\n",
+    "    rowdict[\"bought\"] = sum([t.qty for t in med.transactions if t.qty > 0])\n",
+    "    rowdict[\"spent\"] = round(sum([t.qty*t.price for t in med.transactions]),2)\n",
+    "    rowdict[\"dosage\"] = med.dosage\n",
+    "    rowdict[\"end_price\"] = round(med.transactions[-1].price,2)\n",
+    "    rowdict[\"start_price\"] = round(med.transactions[0].price,2)\n",
+    "    rowdict[\"pct_change\"] = round(med.transactions[-1].price/med.transactions[0].price*100-100,2)\n",
+    "    med_to_csv.append(rowdict)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "240125.95999999993"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pd.DataFrame(med_to_csv,columns=[\"medication_id\",\"category\",\"date\",\"quantity\",\"price\",\"pct_change_from_last\"]).to_csv(\"medication_records_pct.csv\",\n",
-    "                                                                                    index=None)"
+    "sum(meds[\"spent\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Allopurinol \n",
+      "dosages:  [300.0, 100.0]\n",
+      "prices:  [0.32, 0.06]\n",
+      "bought:  [390, 210]\n",
+      "savings:  54.60000000000001\n",
+      "best dose:  100.0\n",
+      "best price:  0.06\n",
+      "\n",
+      "Amitriptyline \n",
+      "dosages:  [10.0, 25.0, 50.0]\n",
+      "prices:  [0.08, 0.24, 0.44]\n",
+      "bought:  [270, 145, 570]\n",
+      "savings:  28.599999999999987\n",
+      "best dose:  10.0\n",
+      "best price:  0.08\n",
+      "\n",
+      "Bisacodyl \n",
+      "dosages:  [10.0, 5.0]\n",
+      "prices:  [0.12, 0.01]\n",
+      "bought:  [51, 110]\n",
+      "savings:  5.1\n",
+      "best dose:  5.0\n",
+      "best price:  0.01\n",
+      "\n",
+      "Calcium carbonate \n",
+      "dosages:  [1250.0, 648.0]\n",
+      "prices:  [0.02, 0.01]\n",
+      "bought:  [20474, 0]\n",
+      "savings:  14.534012345679043\n",
+      "best dose:  648.0\n",
+      "best price:  0.01\n",
+      "\n",
+      "Ciprofloxacin \n",
+      "dosages:  [750.0, 500.0, 250.0, 3.0]\n",
+      "prices:  [0.19, 0.12, 0.08, 3.73]\n",
+      "bought:  [20, 426, 56, 1]\n",
+      "savings:  5.04928\n",
+      "best dose:  500.0\n",
+      "best price:  0.12\n",
+      "\n",
+      "Citalopram \n",
+      "dosages:  [10.0, 20.0, 40.0, 20.0]\n",
+      "prices:  [0.03, 0.02, 0.04, 0.05]\n",
+      "bought:  [5668, 2622, 1620, 2350]\n",
+      "savings:  183.85999999999999\n",
+      "best dose:  20.0\n",
+      "best price:  0.02\n",
+      "\n",
+      "Famotidine \n",
+      "dosages:  [40.0, 20.0]\n",
+      "prices:  [0.11, 0.05]\n",
+      "bought:  [884, 794]\n",
+      "savings:  8.839999999999996\n",
+      "best dose:  20.0\n",
+      "best price:  0.05\n",
+      "\n",
+      "Fluconazole \n",
+      "dosages:  [150.0, 100.0]\n",
+      "prices:  [1.93, 0.95]\n",
+      "bought:  [41, 2]\n",
+      "savings:  20.705000000000005\n",
+      "best dose:  100.0\n",
+      "best price:  0.95\n",
+      "\n",
+      "Furosemide \n",
+      "dosages:  [20.0, 40.0]\n",
+      "prices:  [0.01, 0.02]\n",
+      "bought:  [1995, 8421]\n",
+      "savings:  0.0\n",
+      "best dose:  20.0\n",
+      "best price:  0.01\n",
+      "\n",
+      "Gabapentin \n",
+      "dosages:  [100.0, 300.0, 600.0, 400.0]\n",
+      "prices:  [0.02, 0.04, 0.15, 0.06]\n",
+      "bought:  [5985, 5245, 9130, 2910]\n",
+      "savings:  698.3999999999999\n",
+      "best dose:  300.0\n",
+      "best price:  0.04\n",
+      "\n",
+      "Hydrocortisone \n",
+      "dosages:  [25.0, 1.0, 5.0, 5.0, 25.0]\n",
+      "prices:  [7.03, 1.21, 0.16, 2.79, 2.49]\n",
+      "bought:  [106, 25, 330, 12, 6]\n",
+      "savings:  731.53\n",
+      "best dose:  5.0\n",
+      "best price:  0.16\n",
+      "\n",
+      "Levofloxacin \n",
+      "dosages:  [500.0, 750.0, 250.0]\n",
+      "prices:  [0.16, 0.3, 0.12]\n",
+      "bought:  [59, 19, 3]\n",
+      "savings:  1.2599999999999998\n",
+      "best dose:  500.0\n",
+      "best price:  0.16\n",
+      "\n",
+      "Metoprolol \n",
+      "dosages:  [100.0, 25.0, 50.0]\n",
+      "prices:  [0.07, 0.03, 0.02]\n",
+      "bought:  [2910, 2430, 4860]\n",
+      "savings:  135.9\n",
+      "best dose:  50.0\n",
+      "best price:  0.02\n",
+      "\n",
+      "Mirtazapine \n",
+      "dosages:  [15.0, 15.0, 75.0, 30.0]\n",
+      "prices:  [0.09, 0.11, 1.21, 0.12]\n",
+      "bought:  [740, 230, 210, 90]\n",
+      "savings:  224.8\n",
+      "best dose:  30.0\n",
+      "best price:  0.12\n",
+      "\n",
+      "Nadolol \n",
+      "dosages:  [40.0, 20.0]\n",
+      "prices:  [2.99, 1.36]\n",
+      "bought:  [150, 60]\n",
+      "savings:  40.5\n",
+      "best dose:  20.0\n",
+      "best price:  1.36\n",
+      "\n",
+      "Pravastatin \n",
+      "dosages:  [20.0, 40.0]\n",
+      "prices:  [0.1, 0.24]\n",
+      "bought:  [180, 1334]\n",
+      "savings:  53.35999999999997\n",
+      "best dose:  20.0\n",
+      "best price:  0.1\n",
+      "\n",
+      "Prochlorperazine \n",
+      "dosages:  [10.0, 25.0]\n",
+      "prices:  [0.06, 6.47]\n",
+      "bought:  [100, 12]\n",
+      "savings:  75.83999999999999\n",
+      "best dose:  10.0\n",
+      "best price:  0.06\n",
+      "\n",
+      "Rosuvastatin \n",
+      "dosages:  [5.0, 20.0, 40.0, 10.0]\n",
+      "prices:  [0.06, 4.98, 4.98, 4.98]\n",
+      "bought:  [465, 780, 180, 450]\n",
+      "savings:  6694.200000000001\n",
+      "best dose:  5.0\n",
+      "best price:  0.06\n",
+      "\n",
+      "Spironolactone \n",
+      "dosages:  [25.0, 50.0]\n",
+      "prices:  [0.07, 0.15]\n",
+      "bought:  [900, 780]\n",
+      "savings:  7.799999999999986\n",
+      "best dose:  25.0\n",
+      "best price:  0.07\n",
+      "\n",
+      "buPROPion \n",
+      "dosages:  [150.0, 75.0, 100.0]\n",
+      "prices:  [0.53, 0.07, 0.13]\n",
+      "bought:  [570, 180, 120]\n",
+      "savings:  226.70000000000002\n",
+      "best dose:  75.0\n",
+      "best price:  0.07\n",
+      "\n",
+      "metFORMIN\n",
+      "dosages:  [1000.0, 500.0, 850.0]\n",
+      "prices:  [0.09, 0.01, 0.03]\n",
+      "bought:  [6990, 106380, 3420]\n",
+      "savings:  533.76\n",
+      "best dose:  500.0\n",
+      "best price:  0.01\n",
+      "\n",
+      "SAVINGS: 21278.14\n",
+      "total spend: 240125.96\n",
+      "savings %: 8.861 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re.sub(\"[^0-9]\", \"\", \"sdkjh987978asd098as0980a98sd\")\n",
+    "meds = pd.DataFrame(med_to_csv)\n",
+    "savings = 0\n",
+    "for name,group in meds.groupby(\"common_name\"):\n",
+    "    save_med = 0\n",
+    "    if len(group) <= 1: continue\n",
+    "    dosages = []\n",
+    "    prices = []\n",
+    "    bought = []\n",
+    "    for ix,med in group.iterrows():\n",
+    "        dose = re.sub(\"[^0-9]\", \"\",med[\"dosage\"].split(\" \")[0])\n",
+    "        price = med[\"end_price\"]\n",
+    "        bought.append(med[\"bought\"])\n",
+    "        if dose == \"\": continue\n",
+    "        dosages.append(float(dose))\n",
+    "        prices.append(float(price))\n",
+    "    if len(dosages) <= 1: continue\n",
+    "    price_per_dose = [p/d for p,d in zip(prices, dosages)]\n",
+    "    best_dose = dosages[price_per_dose.index(min(price_per_dose))]\n",
+    "    best_price = prices[price_per_dose.index(min(price_per_dose))]\n",
+    "    for i in range(0,len(dosages)):\n",
+    "        if i != price_per_dose.index(min(price_per_dose)):\n",
+    "            ratio = dosages[i]/best_dose #because we will likely need more\n",
+    "            #if ratio > 1:\n",
+    "            save_med += bought[i]*(prices[i]-(ratio*best_price))\n",
+    "    savings += save_med\n",
+    "    if best_dose != max(dosages):\n",
+    "        print(name)\n",
+    "        print(\"dosages: \", dosages)\n",
+    "        print(\"prices: \", prices)\n",
+    "        print(\"bought: \", bought)\n",
+    "        print(\"savings: \", save_med)\n",
+    "        print(\"best dose: \",best_dose)\n",
+    "        print(\"best price: \",best_price)\n",
+    "        print(\"\")\n",
+    "print(\"SAVINGS:\", round(savings,2))\n",
+    "print(\"total spend:\",round(sum(meds[\"spent\"]),2))\n",
+    "print(\"savings %:\",round(savings/sum(meds[\"spent\"])*100,3),\"%\")"
    ]
   },
   {
@@ -1293,7 +1565,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1678,6 +1950,15 @@
    "source": [
     "prices.iloc[0][1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
